--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -11,7 +11,7 @@ layout: default
         {{ site.title }}
       {% endif %}
     </h1>
-    <p class="desc">{{ page.subtitle }}</p>
+    <h5 class="desc">{{ page.subtitle }}</h5>
   </header>
 
   <article>
