--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,7 @@ li,
 span,
 strong {
   color: var(--global-text-color);
+  font-family: -apple-system, 'Helvetica Neue', BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
 
 hr {
