--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,6 +18,7 @@ span,
 strong {
   color: var(--global-text-color);
   font-family: -apple-system, 'Helvetica Neue', BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+  font-weight: 400;
 }
 
 hr {
