--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -6,7 +6,9 @@
         <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
           {% if site.title == 'blank' %}
             {% if site.first_name %}
-              {{- site.first_name -}}
+              <span style="font-weight: 400">
+                {{- site.first_name -}}
+              </span>
             {% endif %}
             {% if site.middle_name %}
               {{- site.middle_name -}}
