--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -27,7 +27,8 @@
       {% endif %}
       {% if entry.preview %}
         {% if entry.preview contains '://' %}
-          <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
+          <?-- <img class="preview z-depth-1 rounded" src="{{ entry.preview }}"> -->
+          <img class="preview" src="{{ entry.preview }}">
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
           {%
@@ -35,7 +36,8 @@
             loading="eager"
             path=entry_path
             sizes = "200px"
-            class="preview z-depth-1 rounded"
+            <?-- class="preview z-depth-1 rounded" -->
+            class="preview"
             zoomable=true
             alt=entry.preview
           %}
