--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -36,8 +36,10 @@ layout: default
           <div class="more-info">{{ page.profile.more_info }}</div>
         {% endif %}
 
-        <div class="contact-icons">{% include social.liquid %}</div>
-        
+        <div class="social">
+          <div class="contact-icons">{% include social.liquid %}</div>
+        </div>
+
       </div>
     {% endif %}
 
