--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -15,7 +15,7 @@
           {% assign news_limit = news_size %}
         {% endif %}
         {% for item in news limit: news_limit %}
-          <tr>
+          <tr style="-webkit-transform: translate3d(0,0,0);">
             <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
             <td>
               {% if item.inline %}
