--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -16,7 +16,7 @@
         {% endif %}
         {% for item in news limit: news_limit %}
           <tr>
-            <th scope="row" style="width: 20%; font-weight: bold;"><p style="margin-bottom: 0">{{ item.date | date: '%b %d, %Y' }}</p></th>
+            <th scope="row" style="width: 20%;"><p style="margin-bottom: 0; font-weight: bold;">{{ item.date | date: '%b %d, %Y' }}</p></th>
             <td>
               {% if item.inline %}
                 <p style="margin-bottom: 0">{{ item.content | emojify }}</p>
