--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -19,7 +19,7 @@
             <th scope="row" style="width: 20%;"><p style="margin-bottom: 0; font-weight: bold;">{{ item.date | date: '%b %d, %Y' }}</p></th>
             <td>
               {% if item.inline %}
-                <p style="margin-bottom: 0">{{ item.content | emojify }}</p>
+                <p style="margin-bottom: 0">{{ item.content | remove: '<p>' | remove: '</p>' | emojify }}</p>
               {% else %}
                 <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
               {% endif %}
