--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -216,7 +216,7 @@
           <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
         {% endif %}
       {% endif %}
-      {% if entry.extended_version %}
+      {% if entry.extversion %}
         <a href="{{ entry.extversion }}" class="btn btn-sm z-depth-0" role="button">Extended version: {{ entry.extversionname }}</a>
       {% endif %}
       {% if entry.supp %}
